fixes multiple layout bugs

--- a/src/About/About.css
+++ b/src/About/About.css
@@ -10,32 +10,28 @@
 
 .about {
   background-color: var(--red);
-  padding: 5%;
-  text-align: center;
+  padding: 3%;
 }
 
 .title {
-  font-size: 45px;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-.subtitle {
-  font-size: 30px;
-  margin-bottom: 55px;
+  margin-top: 25px;
 }
 
 .paragraph {
   text-align: left;
-  margin: 0 20% 50px 20%;
-  font-size: 24px;
-  line-height: 1.4;
+  line-height: 1.5;
 }
 
 @media (--forMobile) {
-
+  .paragraph {
+    font-size: 16px;
+    margin: 30px 5% 30px 5%;
+  }
 }
 
 @media (--forDesktop) {
-
+  .paragraph {
+    font-size: 20px;
+    margin: 25px 22% 25px 22%;
+  }
 }
