--- a/src/App/App.css
+++ b/src/App/App.css
@@ -18,7 +18,7 @@ body {
 .app {
   display: flex;
   flex-direction: column;
-  margin: 4% 7% 1% 7%;
+  margin: 4% 5% 1% 5%;
 }
 
 .header {
