--- a/src/NoMatch/NoMatch.css
+++ b/src/NoMatch/NoMatch.css
@@ -1,3 +1,7 @@
 .title {
   color: gray(20%);
 }
+
+.image {
+  width: 100%;
+}
